aks/gw-api/02-aks-app-routing-gateway-api-labs/spec/03-gateway-internal-lb.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: apr-lab-gateway
  namespace: approuting-lab
spec:
  gatewayClassName: approuting-istio
  infrastructure:
    annotations:
      service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
