aks/gw-api/02-aks-app-routing-gateway-api-labs/spec/05-gateway-with-options.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: apr-lab-gateway
  namespace: approuting-lab
spec:
  gatewayClassName: approuting-istio
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: apr-lab-gw-options
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
